# sonar

./: Cargo.toml  README.md  build.rs
.github/workflows/: test-minimal.yml
doc/: HOWTO-DAEMON.md  HOWTO-KAFKA.md  NEW-FORMAT.md
sandbox/nvidia/: .gitignore  Makefile  nvml.c  sonar-nvml.c  sonar-nvml.h
src/: amd_smi.rs  batchless.rs  cluster.rs  command.rs  daemon.rs  datasink.rs  gpuapi.rs  jobs.rs  json_tags.rs  kafka.rs  main.rs  mockfs.rs  mockgpu.rs  mockjobs.rs  mocksystem.rs  nvidia.rs  nvidia_nvml.rs  output.rs  procfs.rs  procfsapi.rs  ps.rs  ps_newfmt.rs  ps_oldfmt.rs  ps_test.rs  realgpu.rs  realsystem.rs  slurm.rs  slurmjobs.rs  sysinfo.rs  sysinfo_test.rs  systemapi.rs  time.rs
util/formats/: newfmt_test.go
util/formats/newfmt/: decode_jobs.go  decode_samples.go  to_newfmt.go  to_oldfmt.go  types.go
util/formats/testdata/: newfmt_slurmjobs.json  newfmt_sysinfo.json
util/process-doc/: Makefile  go.mod  process-doc.go
util/ssl/: Makefile
